# CppExplorer

./: .gitignore  CMakeLists.txt  Readme.md
share/: cpp-explorer.desktop
src/: CMakeLists.txt  CMakeLists.txt~  actions.cxx  actions.hh  addressbar_buttons.cxx  addressbar_buttons.hh  addressbar_text.cxx  addressbar_text.hh  browserwidget.cxx  browserwidget.cxx~  browserwidget.hh  clipboard.hh  endtoolbar.cxx  endtoolbar.hh  icons.qrc  main.cxx  main.cxx~  navbar.cxx  navbar.hh  rsc.qrc  searchbar.cxx  searchbar.hh  settings.cxx  settings.hh  sidebar.cxx  sidebar.hh  tabwidget.cxx  tabwidget.hh  trash.cxx  trash.hh  trashbar.cxx  trashbar.hh  window.cxx  window.cxx~  window.hh
src/dialogs/: appchooserdialog.cxx  appchooserdialog.hh  helpdialog.cxx  helpdialog.hh  helpdialog.ui  keyboardshortcutsdialog.cxx  keyboardshortcutsdialog.hh  keyboardshortcutsdialog.ui
src/menu/: background_contextmenu.cxx  background_contextmenu.hh  file_contextmenu.cxx  file_contextmenu.hh  folder_contextmenu.cxx  folder_contextmenu.hh  multi_contextmenu.cxx  multi_contextmenu.hh
src/menubar/: editmenu.cxx  editmenu.hh  filemenu.cxx  filemenu.hh  helpmenu.cxx  helpmenu.hh  viewmenu.cxx  viewmenu.cxx~  viewmenu.hh
src/rsc/: settings.xml
